--- a/index.html
+++ b/index.html
@@ -142,6 +142,44 @@
       <input type="submit" value="Submit" class="btn btn-primary">
   </form>
 </div>
+<!-- Existing HTML code -->
+
+<!-- Task Management Section -->
+<div class="container mt-4">
+    <h2>Task List</h2>
+    <form id="task-form">
+        <div class="form-group">
+            <label for="task-title">Task Title:</label>
+            <input type="text" id="task-title" name="task-title" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="task-priority">Task Priority:</label>
+            <select id="task-priority" name="task-priority" class="form-control">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Task Status:</label><br>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="task-status" id="status-pending" value="pending" checked>
+                <label class="form-check-label" for="status-pending">Pending</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="task-status" id="status-completed" value="completed">
+                <label class="form-check-label" for="status-completed">Completed</label>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Task</button>
+    </form>
+
+    <ul id="task-list" class="list-group mt-4"></ul>
+</div>
+
+<!-- Link to the JavaScript file -->
+<script src="script.js"></script>
+
 
 </body>
 </html>
